Continued tweeks to align the text with changes to results.

--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -2,12 +2,7 @@
 
 \section{Conclusion}
 In this paper we answer three common questions regarding Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology.
-We accomplish this goal by analyzing a large corpus of data produced by industry using grounded theory.
-This method was successfully able to help us separate Blockchain thought leadership provided by industry's best from the hype peddled by industry's worst.
-
-Our results show that Blockchain technology provides several important properties that can be used in many interesting applications and use cases.  These include provenance, auditability, and access control and pseudonymity.
-With these technical properties also comes significant overhead: shared governance and operation (i.e., consensus), as well as a fully replicated, auditable ledger.
-As such, Blockchain technology is best suited for situations in which these properties are required and helpful for the given application or where the overhead can be minimized.
-
-In short, we anticipate that Blockchain technology will be a tool used by industry going forward, supporting interesting and important research for both academic and industry security community members.
-Even though it does not solve all the problems that its proponents claim it does, it is deserving of further research and application.
+We accomplish this goal by using grounded theory to analyze a large corpus of data produced by industry.
+Ultimately, Blockchain technology is neither a panacea nor worthless.
+Instead it is a useful tool in a system developer's toolkit that can be applied when its overhead (consensus and replicated full system provenance) is justified by the system's needs (shared governance and operation, verifiable state, and resilience to data loss).
+Even though Blockchain technology does not solve all the problems that its proponents claim it does, we believe that is a meaningful technology that will continue to be used in industry and is deserving of some attention by industry.
