--- a/paper/sections/use-cases.tex
+++ b/paper/sections/use-cases.tex
@@ -54,7 +54,7 @@ There is ongoing research that demonstrates how Blockchain technology can be use
 Real world financial markets provide the ability for the exchange of valuable assets. 
 They tend to involve intermediaries like exchanges, brokers and dealers, depositories and custodians, and clearing and settlement entities. 
 Blockchain-based assets---which are either intrinsically valuable or are a claim on an off-blockchain asset (material or digital)---can be transacted directly between participants, governed by smart contracts that can provide custodianship, and can require less financial market infrastructure.
-For tokens that represent something off-blockchain (\ie equity in a firm or a debt instrument), the issue of stapling must be addressed.
+For tokens (i.e., digital identifiers) that represent something off-blockchain (\ie equity in a firm or a debt instrument), the issue of stapling must be addressed.
 In most jurisdictions, financial markets are subject to government oversight making this area particularly encumbered by regulation.
 % Jeremy: add LVTS
 
