Fixing citation problems.

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -1229,3 +1229,12 @@
 	biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1708-04748},
 	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@incollection{koens2018blockchain,
+	title={What Blockchain Alternative Do You Need?},
+	author={Koens, Tommy and Poll, Erik},
+	booktitle={Data Privacy Management, Cryptocurrencies and Blockchain Technology},
+	pages={113--129},
+	year={2018},
+	publisher={Springer}
+}
