--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -108,7 +108,7 @@ While many existing Blockchain systems provide a notion of ``pseudonymity'' in w
 % Jeremy: I toned this waaaaaay down. Ethereum has excellent tools now: linters, debuggers, static analysis tools. Even the etheruem wallet can compile and do basic debugging of Solidity code. However, beyond Ethereum things get messy and so that is the new point. 
 For developers, development and analysis tools are critical to building secure applications in any domain, including blockchain. The availability of user-friendly developer tools varies significantly depending on the maturity of the target blockchain. Some projects, like Ethereum have mature tools, while others have very little support. Many blockchains are currently geared towards expert users and lack the user experience-focused tools needed to allow for easier use by non-experts.
 
-Another major challenge of some Blockchain systems is that the require users to store, manage, and secure cryptographic keys. However, this is known to be a significant impediment for most users ~\cite{uss:WhiTyg99}.  A survey by Eskandari et al.~\cite{arxiv:EBSC15} outlines these challenges as well as potential solutions for managing keys for Bitcoin.  They discuss solutions such as password-protected and password-derived keys as well as offline and air-gapped storage of the keys.  But, as the authors state all of these solutions have their drawbacks.
+Another major challenge of some Blockchain systems is that the require users to store, manage, and secure cryptographic keys. However, this is known to be a significant impediment for most users ~\cite{uss:WhiTyg99}.  A survey by Eskandari et al.~\cite{EBSC15} outlines these challenges as well as potential solutions for managing keys for Bitcoin.  They discuss solutions such as password-protected and password-derived keys as well as offline and air-gapped storage of the keys.  But, as the authors state all of these solutions have their drawbacks.
 
 %With a key management solution in place, a further challenge is obtaining transactions for auditing purposes---auditing is a much touted capability of blockchain across our dataset. In a decentralized environment, running a full node on the network, or relying on a entity that does (such as a blockchain explorer website or a lightweight user-client) is necessary. 
 
