--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -90,7 +90,7 @@ Concretely, our key contributions are:
 	
 	\item \textbf{Detailing challenges and limitations related to Blockchain technology.}
 	As part of our review of the literature, we identified several important challenges and limitations for Blockchain technology: scalability, smart contract correctness and dispute resolution, stapling of on-chain tokens to off-chain assets, key management, and regulation.
-	Many of this challenges represent important research questions with interesting potential for future research.
+	Many of these challenges represent important research questions with interesting potential for future research.
 %	In this paper, we also survey the academic research that has already been conducted in regards to Blockchain technology.
 
 %	\item \textbf{Describe how Blockchain technology fits in relation to other distributed databases.}
