--- a/paper/sections/related-works.tex
+++ b/paper/sections/related-works.tex
@@ -5,7 +5,7 @@
 
 Different aspects of the Blockchain landscape have been systemized in past work, however our approach provides a unique and complimentary perspective. An early comprehensive work is Bonneau \etal's cryptocurrency systemization of knowledge~\cite{BMC+15}, which advocates for research on Bitcoin, merges disparate non-academic sources of information, and evaluates extensions that begin to tread beyond currency. We share a common approach of bringing non-academic work into an academic light, however we take the broader focus of blockchain applications beyond cryptocurrencies as our starting point, we take greater effort at applying a thorough methodology for the evaluation of non-academic work, and we draw from a different body of knowledge (\ie from industry practitioners instead of the developer community).
 
-More recently, W{\"u}st and Gervais develop a flow chart to answer the question: ``do you need a Blockchain''~\cite{Wust17}, and they evaluate several use-cases (that overlap with the ones we extract) with it. The authors use an approach based on domain knowledge and technical expertise; we purposely seek to minimize our own researcher bias to ascertain how non-experts understand the technology. Their flow chart is compared favorably to 30 similar charts appearing in industry whitepapers (that overlap with our dataset) and blog posts studied by Koens and Poll~\cite{}. This minimizes the novelty of the flowchart we develop in Figure~\ref{fig:blockchainFlowchart}, but it is a minor contribution of this work. 
+More recently, W{\"u}st and Gervais develop a flow chart to answer the question: ``do you need a Blockchain''~\cite{Wust17}, and they evaluate several use-cases (that overlap with the ones we extract) with it. The authors use an approach based on domain knowledge and technical expertise; we purposely seek to minimize our own researcher bias to ascertain how non-experts understand the technology. Their flow chart is compared favorably to 30 similar charts appearing in industry whitepapers (that overlap with our dataset) and blog posts studied by Koens and Poll~\cite{koens2018blockchain}. This minimizes the novelty of the flowchart we develop in Figure~\ref{fig:blockchainFlowchart}, but it is a minor contribution of this work. 
 
 Narayanan and Clark describe the `academic pedigree' of Bitcoin's core technical innovations, repudiating the common belief that Bitcoin was a radical departure from existing research~\cite{Narayanan17}. The authors touch lightly on the public (mis)understanding of blockchain, highlighting some key misconceptions, however our work explores this thoroughly.
 
