--- a/paper/sections/use-cases.tex
+++ b/paper/sections/use-cases.tex
@@ -45,7 +45,8 @@ If the answer to both questions is no, then Blockchain's consensus protocol is l
 It is well-known that Blockchain technology can be used to build cryptocurrencies; Bitcoin is a working example of this.
 Blockchain technologies enable electronic transactions that are resilient even when large values are at stake.
 Bitcoin has notable drawbacks that include scalability, performance and privacy.
-There is ongoing research that demonstrates how Blockchain technology can be used to create payment systems that are low-latency and scalable~\cite{}, partially offline~\cite{}, confidential~\cite{} and/or anonymous~\cite{}.
+%There is ongoing research that demonstrates how Blockchain technology can be used to create payment systems that are low-latency and scalable~\cite{}, partially offline~\cite{}, confidential~\cite{} and/or anonymous~\cite{}.
+There is ongoing research that demonstrates how Blockchain technology can be used to create payment systems that are low-latency and scalable, partially offline, confidential, and/or anonymous (see Appendix~\ref{sec:academic}).
 
 \paragraph{Asset trading}
 % Jeremy: previously Token tracking and trading
