--- a/paper/sections/use-cases.tex
+++ b/paper/sections/use-cases.tex
@@ -6,11 +6,11 @@
 Within the literature we analyzed, there was significant discussion about potential applications for Blockchain technology.
 We describe these use cases here.
 In many cases, an argument could be made that these are not independent use cases. Some use cases are subsumed by others, or two use cases might have a common abstraction that make them effectively the same.
-As authors, we attempt to categorize in a way that is useful to the reader trying to locate information about a particular use case. Before discussing the use cases themselves, we first discuss the general parameters of when a blockchain is useful. 
+As authors, we attempt to categorize in a way that is useful to the reader trying to locate information about a particular use case. Before discussing the use cases themselves, we first discuss the general parameters of when a Blockchain is useful. 
 
 \subsection{Relationship to other distributed systems}
 
-Blockchain technologies provide a unique set of capabilities that might be better suited for a system design than competing database technologies or distributed systems.
+Blockchain technology provide a unique set of capabilities that might be better suited for a system design than competing database technologies or distributed systems.
 However it does come with a relatively high overhead: replicating all past and present data and operations on the data at every node of the network in an auditable ledger.
 Based on our results and experience we recommend the use of the following questions to determine if Blockchain technology would be a good fit for a specific project (see Section~\ref{sec:sharedgov} for definitions).\footnote{In Appendix~\ref{sec:distributed-comparison} we discuss alternatives to Blockchain technology.}
 
@@ -43,7 +43,7 @@ If the answer to both questions is no, then Blockchain's consensus protocol is l
 % anonymous: zerocoin, zerocash, etc
 
 It is well-known that Blockchain technology can be used to build cryptocurrencies; Bitcoin is a working example of this.
-Blockchain technologies enable electronic transactions that are resilient even when large values are at stake.
+Blockchain technology enable electronic transactions that are resilient even when large values are at stake.
 Bitcoin has notable drawbacks that include scalability, performance and privacy.
 %There is ongoing research that demonstrates how Blockchain technology can be used to create payment systems that are low-latency and scalable~\cite{}, partially offline~\cite{}, confidential~\cite{} and/or anonymous~\cite{}.
 There is ongoing research that demonstrates how Blockchain technology can be used to create payment systems that are low-latency and scalable, partially offline, confidential, and/or anonymous (see Appendix~\ref{sec:academic}).
@@ -54,8 +54,8 @@ There is ongoing research that demonstrates how Blockchain technology can be use
 
 Real world financial markets provide the ability for the exchange of valuable assets. 
 They tend to involve intermediaries like exchanges, brokers and dealers, depositories and custodians, and clearing and settlement entities. 
-Blockchain-based assets---which are either intrinsically valuable or are a claim on an off-blockchain asset (material or digital)---can be transacted directly between participants, governed by smart contracts that can provide custodianship, and can require less financial market infrastructure.
-For tokens (i.e., digital identifiers) that represent something off-blockchain (\ie equity in a firm or a debt instrument), the issue of stapling must be addressed.
+Blockchain-based assets---which are either intrinsically valuable or are a claim on an off-chain asset (material or digital)---can be transacted directly between participants, governed by smart contracts that can provide custodianship, and can require less financial market infrastructure.
+For tokens (i.e., digital identifiers) that represent something off-chain (\ie equity in a firm or a debt instrument), the issue of stapling must be addressed.
 In most jurisdictions, financial markets are subject to government oversight making this area particularly encumbered by regulation.
 % Jeremy: add LVTS
 
@@ -63,9 +63,9 @@ In most jurisdictions, financial markets are subject to government oversight mak
 
 A central component of asset trading is the market itself---the coordination point for buyers and sellers to find each other, exchange assets, and provide price information to observers.
 Auctions are a common mechanism for setting a fair price; this includes double-sided auctions like the order books in common use by financial exchanges. 
-Decentralized markets and auction mechanisms can run on blockchain technology.
+Decentralized markets and auction mechanisms can run on Blockchain technology.
 A main challenge is the issue of non-confidential transactions. 
-An additional challenge is the potential for front-running by participants in the blockchain network (in particular, miners) who learn of transactions before they are finalized. 
+An additional challenge is the potential for front-running by miners who learn of transactions before they are finalized. 
 
 \paragraph{Insurance and futures}
 
@@ -73,14 +73,14 @@ A transaction can be thought of as a swap of one valuable asset for another. Swa
 Examples include agreeing to a price for a future purchase of oil, turning a variable interest rate into a fixed rate, and providing cash for collateral with the promise that the cash will be returned.
 Further this future swap might be contingent on an event happening. 
 Examples include a derivative that is valuable if a stock price decreases, an insurance payout for a fire, or a payment that covers a loan default.
-The primary challenge of transactions of this the risk that the counterparty will not fulfill their future obligations. While blockchain technologies can reduce some types of trust, it cannot easily solve counterparty risk. 
-It can offer transparency which can be used to build reputation and contracts can be designed to hold digital currency or assets as collateral and disperse them if blockchain-based conditions are met.
-A second challenge for many of these use cases is reporting real world events (a fire, a change in the price of a stock, or mortgage default) to the blockchain in a trustworthy fashion, however this is not an issue for events that are blockchain-based to begin with---this points to a critical point: deploying several complimentary use cases on the same blockchain enables complex interactions. 
+The primary challenge of transactions of this the risk that the counterparty will not fulfill their future obligations. While Blockchain technology can reduce some types of trust, it cannot easily solve counterparty risk. 
+It can offer transparency which can be used to build reputation and contracts can be designed to hold digital currency or assets as collateral and disperse them if Blockchain-based conditions are met.
+A second challenge for many of these use cases is reporting real world events (a fire, a change in the price of a stock, or mortgage default) to the Blockchain in a trustworthy fashion, however this is not an issue for events that are Blockchain-based to begin with---this points to a critical point: deploying several complimentary use cases on the same Blockchain enables complex interactions. 
 
 \paragraph{Penalties, remedies, and sanctions}
 
-In common parlance, code running on a blockchain is called a smart contract.\footnote{In particular, the success of Ethereum contributed to this, although that project now prefers the term `decentalized app' or dapp for short.} Legal contracts will often anticipate potential future breaches and offer a set of penalties or remedies.
-With blockchain technology, a set of remedies could be programmed into the contract assuming both the triggering event and the resulting action are blockchain-based (or the real-world/blockchain gap is bridged by a trustworthy entity).
+In common parlance, code running on a Blockchain is called a smart contract.\footnote{In particular, the success of Ethereum contributed to this, although that project now prefers the term `decentalized app' or dapp for short.} Legal contracts will often anticipate potential future breaches and offer a set of penalties or remedies.
+With Blockchain technology, a set of remedies could be programmed into the contract assuming both the triggering event and the resulting action are Blockchain-based (or the real-world/Blockchain gap is bridged by a trustworthy entity).
 If the contract is legally well-formed, with identified counterparties in a clear jurisdiction, the remedies can be thought of as a set of reasonable default actions that can avoid, but do not preclude, expensive litigation. 
 
 % =====
@@ -96,10 +96,10 @@ It also includes the individual components of complex assembled devices, where t
 For heavily regulated industries, like airlines, and for military/intelligence applications, it is important to establish the source of each part that has been used, as well as a maintenance history.
 While assets are already tracked in digital databases, there is no common database shared by each participant in the supply chain.  
 
-A blockchain sidesteps the political problem of who should host such a shared database when the candidates are competing firms and government agencies from different jurisdictions. 
+A Blockchain sidesteps the political problem of who should host such a shared database when the candidates are competing firms and government agencies from different jurisdictions. 
 Blockchain technology provides a common environment where no single firm has the elevated power and control of running a widely-used database. 
-The main integrity challenge is the stapling issue: specifying how material assets are assigned a tracking token on the blockchain in a trustworthy manner. 
-A second challenge is the lack of confidentiality blockchain technologies offer by default  when the data is proprietary and tied to profitable business practices.
+The main integrity challenge is the stapling issue: specifying how material assets are assigned a tracking token on the Blockchain in a trustworthy manner. 
+A second challenge is the lack of confidentiality Blockchain technology offers by default  when the data is proprietary and tied to profitable business practices.
 A third challenge is getting agreement on the technology to be used (this is being explored through business consortiums.\footnote{\eg Blockchain in Transport Alliance}).
 
 \paragraph{Identity and key management}
@@ -112,10 +112,10 @@ This could also be a quicker and more performant way of establishing identity th
 
 \paragraph{Multi-organization data sharing}
 
-Asset tracking and identity tracking are both examples of sharing data across organizations, and blockchain technology contributes a common environment.
-The use cases in this category share common challenges: blockchain technology can specify write access policies to data stored on the blockchain, but it will not provide any default support for restricting read access; confidentiality has to be an additional layer.
+Asset tracking and identity tracking are both examples of sharing data across organizations, and Blockchain technology contributes a common environment.
+The use cases in this category share common challenges: Blockchain technology can specify write access policies to data stored on the Blockchain, but it will not provide any default support for restricting read access; confidentiality has to be an additional layer.
 Further, the integrity of confidential data cannot be validated by nodes in the network without some minimal disclosure of what the data is or that it satisfies the relevant restrictions.
-Blockchain can also serve as a secondary component in these systems, where capabilities are issued and transferred as if they were financial assets on a blockchain. Proving ownership over a capability is done off-blockchain to a traditional enforcement server, which enables the correct permissions.
+Blockchain can also serve as a secondary component in these systems, where capabilities are issued and transferred as if they were financial assets on a Blockchain. Proving ownership over a capability is done off-chain to a traditional enforcement server, which enables the correct permissions.
 
 
 \paragraph{Tamper-resistant record storage}
@@ -127,7 +127,7 @@ This use case is best suited for records that are highly valuable (such as certi
 If large and/or confidential documents need to be stored, then the Blockchain can store binding/hiding commitments for the documents, while the documents themselves are stored in another system with lower overhead.
 %For open Blockchains, the identity of the entity certifying the data is not provided for by default on a Blockchain.
 % Jeremy: Querying -> give me everything
-Blockchain technology could be used to timestamp documents. Still, timestamping generally does not rely on any of Blockchain technologies key properties, and so Blockchain technology is likely overkill for this application.
+Blockchain technology could be used to timestamp documents. Still, timestamping generally does not rely on any of Blockchain technology's key properties, and so Blockchain technology is likely overkill for this application.
 
 
 % Jeremy: Why is this removed? I don't disagree with its removal but want to confirm the motivation
@@ -152,7 +152,7 @@ However voting on a Blockchain has many challenges to solve: Blockchains offer n
 
 \paragraph{Gambling and Games}
 % Jeremy: To improve
-By examining the most active Bitcoin scripts and Ethereum decentralized applications, gambling is popular. Players can audit the game to ensure that execution is fair, and the system can operate its own cryptocurrency to handle the finances (including holding the money in escrow to prevent losing parties from aborting before paying). This use case is best suited to gambling games that do not require randomness, private state, or knowledge of off-blockchain events. For the subset of residual games,\footnote{Currently, the most active Ethereum game is called Fomo3D: users pay to reset a 30 second countdown timer and if it ever reaches zero, the last user to pay wins all the money collected.} blockchain is an ideal platform. For the other types of games, new layers of technology would have be added on a Blockchain. Data-feeds (called oracles) of either randomness or real world event outcomes requires additional trust and introduces finality risk, while confidential user state require additional cryptography.  
+By examining the most active Bitcoin scripts and Ethereum decentralized applications, gambling is popular. Players can audit the game to ensure that execution is fair, and the system can operate its own cryptocurrency to handle the finances (including holding the money in escrow to prevent losing parties from aborting before paying). This use case is best suited to gambling games that do not require randomness, private state, or knowledge of off-chain events. For the subset of residual games,\footnote{Currently, the most active Ethereum game is called Fomo3D: users pay to reset a 30 second countdown timer and if it ever reaches zero, the last user to pay wins all the money collected.} Blockchain is an ideal platform. For the other types of games, new layers of technology would have be added on a Blockchain. Data-feeds (called oracles) of either randomness or real world event outcomes requires additional trust and introduces finality risk, while confidential user state require additional cryptography.  
 
 \paragraph{IoT and smart property}
 % Jeremy: To do
